# hakyll_blog

./: README.md  about.markdown  blog.html  index.html  john.cabal  news.html  presentation.md  projects.markdown  research.markdown
css/: all.css  core.css  solarized_light.css
news/: 2014-12-02-landing-on-github-pages.md
posts/: 2014-12-02-my-first-blog.markdown  2014-12-03-oracle-11g-xe-on-rhel7.markdown  2015-08-24-install-haskell-locally.markdown
slides/: 2014-12-02-test.markdown  2014-12-08-Introduction-of-AWS.markdown
src/: Main.hs
templates/: contacts.html  default.html  footer.html  main.html  navbar.html  news-list.html  post.html  slides.html  tags.html
