Name:               John
Version:            0.0.0.0
Synopsis:           Personal website of Wei Shi
Description:        Personal website of Wei Shi
Homepage:           http://shi2wei3.github.io/
License:            AllRightsReserved
License-file:       LICENSE
Author:             Wei Shi
Maintainer:         shi2wei3@gmail.com
Copyright:          (C) 2014 Wei Shi
Category:           Web
Build-type:         Simple
Extra-source-files: README.markdown
Cabal-version:      >= 1.8

Executable john
  Main-is:        Main.hs
  Ghc-options:    -Wall
  Hs-source-dirs: src

  Build-depends:
    base      >= 4.6  && < 4.8,
    binary    >= 0.5  && < 0.8,
    directory >= 1.2  && < 1.3,
    filepath  >= 1.3  && < 1.4,
    hakyll    >= 4.6  && < 4.7,
    pandoc    >= 1.12 && < 1.14,
    process   >= 1.1  && < 1.3
